# cmake-googletest-template

./: CMakeLists.txt  README.md
app/: sample_app.cpp
include/: sample_library.hpp
src/constructors/: constructor.cpp
src/functions/: conversion.cpp  utility.cpp
src/operators/: arithmetics.cpp  assignments.cpp  comparisons.cpp  io.cpp  unaries.cpp
test/: main_test.cc
